@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-02T01:25:24Z",
-  "count_outdated" : 316,
-  "uniques_outdated" : 57,
+  "timestamp" : "2022-06-02T16:25:44Z",
+  "count_outdated" : 319,
+  "uniques_outdated" : 59,
   "count" : 368,
   "uniques" : 66,
   "views" : [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
