@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 9,
+  "count": 49,
+  "uniques": 7,
   "views": [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
